--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/kaiban.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="135x135">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kaiban Board</title>
   </head>
